Fixes animation z-indexing issue for Tile layers

--- a/src/styles/components/_tile.scss
+++ b/src/styles/components/_tile.scss
@@ -36,6 +36,7 @@
     top: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
